bull/k8s/4-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: staging
  labels:
    app: my-app
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 80          # Port on which the service will be exposed
      targetPort: 8080     # Port where the app is listening inside the pod
      nodePort: 30008    # External port accessible on the node (should be between 30000 and 32767)
