bull/k8s/server-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  labels:
    app: my-app
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 6969          # Port on which the service will be exposed
      targetPort: 6969     # Port where the app is listening inside the pod
      nodePort: 30007    # External port accessible on the node (should be between 30000 and 32767)
